--- a/testing/noteside/textareainsert.html
+++ b/testing/noteside/textareainsert.html
@@ -2,7 +2,7 @@
 	<meta charset="utf-8">
 	<meta author="jamesac">
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
-	<link href="https://fonts.googleapis.com/css?family=Dosis|Eczar|Share+Tech+Mono|Ubuntu|Ubuntu+Monoz|Patua+One" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css?family=Dosis|Eczar|Share+Tech+Mono|Ubuntu|Ubuntu+Monoz" rel="stylesheet">
 	<script src="wordcount.js"></script>
 	<script src="ckeditor/ckeditor.js"></script>
 	<title>textinsert</title>
