Design Note page

--- a/testing/noteside/Note/note.html
+++ b/testing/noteside/Note/note.html
@@ -3,6 +3,7 @@
 <head>
 	<meta charset="UTF-8">
 	<link href="note.css" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css?family=Ubuntu|Ubuntu+Monoz|Eczar" rel="stylesheet">
 	<title>Note</title>
 </head>
 <body>
@@ -15,6 +16,38 @@
 			<li><a href="">Account</a></li>
 			<li><a href="">Notebook</a></li>
 		</ul>
+	</div>
+	<div class="container">
+		<div class="sidebar">
+			<div class="toolbar-div">
+				<ul class="toolbar">
+					<li><a href="">Print</a></li>
+					<li><a href="">Share</a></li>
+					<li><a href="">Save</a></li>
+					<li><a href="">Delete</a></li>
+					<li><a href="">Edit</a></li>
+				</ul>
+			</div>
+		</div>
+		<div class="note-container">
+			<div class="note-title-div">
+				<span class="note-title">Title</span>
+			</div>
+			<div class="note-info-div">
+				<div class="note-info-row">
+					Chapter 1
+				</div>
+				<div class="note-info-row">
+					Created By <a href="">null</a>
+				</div>
+				<div class="note-info-row">
+					Teachere
+				</div>
+			</div>
+			<div class="note-content">
+				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Cupiditate nulla distinctio alias consequuntur corporis ea rem. Ea similique quod vero quis tenetur a, dolor assumenda illum quaerat nemo repudiandae, consequatur? Nam asperiores animi eius voluptas facilis laudantium inventore amet quo commodi, eveniet non, debitis aperiam laborum, nostrum tenetur atque dolor! Perspiciatis, rem labore earum facere vero! Tempore inventore maxime culpa suscipit perferendis animi architecto, incidunt itaque possimus voluptatibus amet, ratione explicabo, distinctio. Temporibus ullam perferendis earum placeat eos ab, repudiandae veritatis, at dolorum numquam nostrum, nemo impedit assumenda quisquam nisi voluptas iusto dolorem officiis corporis. Quisquam doloribus nostrum esse commodi atque molestiae omnis nisi possimus aspernatur ipsum veritatis explicabo tempora sed accusantium sunt, molestias recusandae sit, illum magnam adipisci aliquam. Hic, ex, aliquam. Adipisci aliquam unde, veniam placeat repellendus quas quaerat velit minima officiis non, similique omnis magnam odit repudiandae reprehenderit asperiores iusto maiores dicta. Quas, doloremque natus? Alias quis laudantium dignissimos voluptatibus accusantium dolorum iure, accusamus distinctio voluptas quod reprehenderit. Alias corrupti aperiam, consequatur fugit. Eveniet velit nostrum, totam aperiam enim. Nihil corrupti totam voluptatem hic, dolore illo facere nisi excepturi sequi, sapiente rem ullam quidem, velit distinctio voluptas suscipit incidunt natus magni esse cupiditate ratione! Placeat, enim et. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ipsa earum velit ex deleniti excepturi est obcaecati dolorum quo fugiat vitae maiores eaque aut sed, magni nulla explicabo debitis dolorem eos, ullam hic cupiditate expedita illum odio optio! Tempora minima accusantium rem cumque, in sed asperiores, dolorum aliquam magni quod praesentium molestias, repudiandae. Placeat iure velit, fugit tempore deserunt, aperiam ea animi maiores voluptatem incidunt voluptate necessitatibus mollitia! Architecto sunt officia quam ex repudiandae voluptatibus sit velit omnis amet est, qui hic earum, eum corporis maxime doloribus labore in sed alias? Modi expedita neque, est repellendus officiis suscipit quidem nobis sunt voluptate dolorum aperiam ipsa distinctio ducimus optio molestiae dolores sapiente, excepturi non velit cum. Velit distinctio cupiditate eveniet suscipit nemo, id aperiam commodi tempora, voluptas vel perferendis esse, rerum culpa nisi veniam inventore, rem modi. Perferendis dolorem deserunt nesciunt temporibus, et nostrum reiciendis accusantium at quisquam neque quam amet accusamus omnis vel ex, molestiae iure dolore voluptates voluptatibus laborum quos labore numquam debitis tempora perspiciatis. Fugiat facilis, maxime veritatis sit, amet a voluptates natus, sunt nihil labore voluptate aut eligendi placeat illum earum facere quos unde pariatur ipsum aspernatur. Quod placeat, sed iure vel nihil voluptate libero rem nulla, sit?</p>
+			</div>
+		</div>
 	</div>
 </body>
 </html>
