--- a/testing/noteside/Note/note.html
+++ b/testing/noteside/Note/note.html
@@ -3,7 +3,9 @@
 <head>
 	<meta charset="UTF-8">
 	<link href="note.css" rel="stylesheet">
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
 	<link href="https://fonts.googleapis.com/css?family=Ubuntu|Ubuntu+Monoz|Eczar" rel="stylesheet">
+	<script src="note.js"></script>
 	<title>Note</title>
 </head>
 <body>
@@ -31,7 +33,7 @@
 		</div>
 		<div class="note-container">
 			<div class="note-title-div">
-				<span class="note-title">Title</span>
+				<span class="note-title"><strong>Title</strong></span>
 			</div>
 			<div class="note-info-div">
 				<div class="note-info-row">
@@ -41,7 +43,7 @@
 					Created By <a href="">null</a>
 				</div>
 				<div class="note-info-row">
-					Teachere
+					Teacher
 				</div>
 			</div>
 			<div class="note-content">
