--- a/testing/noteside/Create/textareainsert.html
+++ b/testing/noteside/Create/textareainsert.html
@@ -157,7 +157,7 @@
 </div>
 <div class="container">
 	<h1>Create</h1><hr>
-	<div id="navbar">
+	<div id="format-bar-div">
 		<ul id="format_bar">
 			<div id="header-outer-ctrl">
 				<li id="headers-toggle" class="dropdown">
