--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 					
 				</div>
 			</a>
-			<a href="projects/Workday/">
+			<a href="projects/workday/">
 				<div class="col-md-3 text-center changeenter">
 				
 					<img class="img-responsive center" id="timerimg" src="images/timer.png"/>
