--- a/projects/workday/index.html
+++ b/projects/workday/index.html
@@ -3,9 +3,9 @@
 <head>
 	<meta charset="UTF-8">
 	<title>Workday</title>
+	<link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
 	<link rel="stylesheet" href="style.css"/>
-	<script src="jquery-3.2.1.min.js"></script>
-	<script src="timer.js"></script>
+	<link rel="stylesheet" href="numbers.css"/>
 </head>
 <body>
 	<div class="progress-bar">
@@ -68,5 +68,14 @@
 			</div>
 		</div>
 	</div>
+	<div class="tab"><</div>
+	<div class="settings">
+		<input id="seconds-input" type="text" maxlength="5" placeholder="Set Seconds">
+		<div class="button submit">Set</div>
+		<div class="button set-work">Work</div>
+		<div class="button set-school">School</div>
+	</div>
+	<script src="jquery-3.2.1.min.js"></script>
+	<script src="timer.js"></script>
 </body>
 </html>
