--- a/projects/blackpage/blackpage.html
+++ b/projects/blackpage/blackpage.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="UTF-8">
 	<title>Black Screen</title>
-	<link rel="icon" type="image/ico" href="images/favicon.ico"/>
+	<link rel="icon" type="image/ico" href="../../images/favicon.ico"/>
 </head>
 <body style="background:#000">
 	<script>
