--- a/projects/workday/index.html
+++ b/projects/workday/index.html
@@ -23,155 +23,161 @@
 			</div>
 			<div class="timer-setting">
 				<div class="hour-scroll scroll">
-					<div>0</div>
-					<div>1</div>
-					<div>2</div>
-					<div>3</div>
-					<div>4</div>
-					<div>5</div>
-					<div>6</div>
-					<div>7</div>
-					<div>8</div>
-					<div>9</div>
-					<div>10</div>
-					<div>11</div>
-					<div>12</div>
-					<div>13</div>
-					<div>14</div>
-					<div>15</div>
-					<div>16</div>
-					<div>17</div>
-					<div>18</div>
-					<div>19</div>
-					<div>20</div>
-					<div>21</div>
-					<div>22</div>
-					<div>23</div>
-					<div>24</div>
+					<div class="scroll-inner">
+						<div>0</div>
+						<div>1</div>
+						<div>2</div>
+						<div>3</div>
+						<div>4</div>
+						<div>5</div>
+						<div>6</div>
+						<div>7</div>
+						<div>8</div>
+						<div>9</div>
+						<div>10</div>
+						<div>11</div>
+						<div>12</div>
+						<div>13</div>
+						<div>14</div>
+						<div>15</div>
+						<div>16</div>
+						<div>17</div>
+						<div>18</div>
+						<div>19</div>
+						<div>20</div>
+						<div>21</div>
+						<div>22</div>
+						<div>23</div>
+						<div>24</div>
+					</div>
 				</div>
 				<div class="minute-scroll scroll">
-					<div>0</div>
-					<div>1</div>
-					<div>2</div>
-					<div>3</div>
-					<div>4</div>
-					<div>5</div>
-					<div>6</div>
-					<div>7</div>
-					<div>8</div>
-					<div>9</div>
-					<div>10</div>
-					<div>11</div>
-					<div>12</div>
-					<div>13</div>
-					<div>14</div>
-					<div>15</div>
-					<div>16</div>
-					<div>17</div>
-					<div>18</div>
-					<div>19</div>
-					<div>20</div>
-					<div>21</div>
-					<div>22</div>
-					<div>23</div>
-					<div>24</div>
-					<div>25</div>
-					<div>26</div>
-					<div>27</div>
-					<div>28</div>
-					<div>29</div>
-					<div>30</div>
-					<div>31</div>
-					<div>32</div>
-					<div>33</div>
-					<div>34</div>
-					<div>35</div>
-					<div>36</div>
-					<div>37</div>
-					<div>38</div>
-					<div>39</div>
-					<div>40</div>
-					<div>41</div>
-					<div>42</div>
-					<div>43</div>
-					<div>44</div>
-					<div>45</div>
-					<div>46</div>
-					<div>47</div>
-					<div>48</div>
-					<div>49</div>
-					<div>50</div>
-					<div>51</div>
-					<div>52</div>
-					<div>53</div>
-					<div>54</div>
-					<div>55</div>
-					<div>56</div>
-					<div>57</div>
-					<div>58</div>
-					<div>59</div>
+					<div class="scroll-inner">
+						<div>0</div>
+						<div>1</div>
+						<div>2</div>
+						<div>3</div>
+						<div>4</div>
+						<div>5</div>
+						<div>6</div>
+						<div>7</div>
+						<div>8</div>
+						<div>9</div>
+						<div>10</div>
+						<div>11</div>
+						<div>12</div>
+						<div>13</div>
+						<div>14</div>
+						<div>15</div>
+						<div>16</div>
+						<div>17</div>
+						<div>18</div>
+						<div>19</div>
+						<div>20</div>
+						<div>21</div>
+						<div>22</div>
+						<div>23</div>
+						<div>24</div>
+						<div>25</div>
+						<div>26</div>
+						<div>27</div>
+						<div>28</div>
+						<div>29</div>
+						<div>30</div>
+						<div>31</div>
+						<div>32</div>
+						<div>33</div>
+						<div>34</div>
+						<div>35</div>
+						<div>36</div>
+						<div>37</div>
+						<div>38</div>
+						<div>39</div>
+						<div>40</div>
+						<div>41</div>
+						<div>42</div>
+						<div>43</div>
+						<div>44</div>
+						<div>45</div>
+						<div>46</div>
+						<div>47</div>
+						<div>48</div>
+						<div>49</div>
+						<div>50</div>
+						<div>51</div>
+						<div>52</div>
+						<div>53</div>
+						<div>54</div>
+						<div>55</div>
+						<div>56</div>
+						<div>57</div>
+						<div>58</div>
+						<div>59</div>
+					</div>
 				</div>
 				<div class="second-scroll scroll">
-					<div>0</div>
-					<div>1</div>
-					<div>2</div>
-					<div>3</div>
-					<div>4</div>
-					<div>5</div>
-					<div>6</div>
-					<div>7</div>
-					<div>8</div>
-					<div>9</div>
-					<div>10</div>
-					<div>11</div>
-					<div>12</div>
-					<div>13</div>
-					<div>14</div>
-					<div>15</div>
-					<div>16</div>
-					<div>17</div>
-					<div>18</div>
-					<div>19</div>
-					<div>20</div>
-					<div>21</div>
-					<div>22</div>
-					<div>23</div>
-					<div>24</div>
-					<div>25</div>
-					<div>26</div>
-					<div>27</div>
-					<div>28</div>
-					<div>29</div>
-					<div>30</div>
-					<div>31</div>
-					<div>32</div>
-					<div>33</div>
-					<div>34</div>
-					<div>35</div>
-					<div>36</div>
-					<div>37</div>
-					<div>38</div>
-					<div>39</div>
-					<div>40</div>
-					<div>41</div>
-					<div>42</div>
-					<div>43</div>
-					<div>44</div>
-					<div>45</div>
-					<div>46</div>
-					<div>47</div>
-					<div>48</div>
-					<div>49</div>
-					<div>50</div>
-					<div>51</div>
-					<div>52</div>
-					<div>53</div>
-					<div>54</div>
-					<div>55</div>
-					<div>56</div>
-					<div>57</div>
-					<div>58</div>
-					<div>59</div>
+					<div class="scroll-inner">
+						<div>0</div>
+						<div>1</div>
+						<div>2</div>
+						<div>3</div>
+						<div>4</div>
+						<div>5</div>
+						<div>6</div>
+						<div>7</div>
+						<div>8</div>
+						<div>9</div>
+						<div>10</div>
+						<div>11</div>
+						<div>12</div>
+						<div>13</div>
+						<div>14</div>
+						<div>15</div>
+						<div>16</div>
+						<div>17</div>
+						<div>18</div>
+						<div>19</div>
+						<div>20</div>
+						<div>21</div>
+						<div>22</div>
+						<div>23</div>
+						<div>24</div>
+						<div>25</div>
+						<div>26</div>
+						<div>27</div>
+						<div>28</div>
+						<div>29</div>
+						<div>30</div>
+						<div>31</div>
+						<div>32</div>
+						<div>33</div>
+						<div>34</div>
+						<div>35</div>
+						<div>36</div>
+						<div>37</div>
+						<div>38</div>
+						<div>39</div>
+						<div>40</div>
+						<div>41</div>
+						<div>42</div>
+						<div>43</div>
+						<div>44</div>
+						<div>45</div>
+						<div>46</div>
+						<div>47</div>
+						<div>48</div>
+						<div>49</div>
+						<div>50</div>
+						<div>51</div>
+						<div>52</div>
+						<div>53</div>
+						<div>54</div>
+						<div>55</div>
+						<div>56</div>
+						<div>57</div>
+						<div>58</div>
+						<div>59</div>
+					</div>
 				</div>
 			</div>
 			<div class="set-time time-btn">SET</div>
@@ -249,8 +255,6 @@
 	</div>
 	-->
 	<script src="jquery-3.2.1.min.js"></script>
-	<script src="jquery.scroll_to.js"></script>
-	<script src="jquery.snapscroll.js"></script>
 	<script src="timer.js"></script>
 </body>
 </html>
