Add wheel functionality

--- a/projects/workday/index.html
+++ b/projects/workday/index.html
@@ -23,7 +23,7 @@
 			</div>
 			<div class="timer-setting">
 				<div class="hour-scroll scroll">
-					<div class="scroll-inner">
+					<div class="hour-scroll-inner scroll-inner">
 						<div>0</div>
 						<div>1</div>
 						<div>2</div>
@@ -48,11 +48,10 @@
 						<div>21</div>
 						<div>22</div>
 						<div>23</div>
-						<div>24</div>
 					</div>
 				</div>
 				<div class="minute-scroll scroll">
-					<div class="scroll-inner">
+					<div class="minute-scroll-inner scroll-inner">
 						<div>0</div>
 						<div>1</div>
 						<div>2</div>
@@ -116,7 +115,7 @@
 					</div>
 				</div>
 				<div class="second-scroll scroll">
-					<div class="scroll-inner">
+					<div class="second-scroll-inner scroll-inner">
 						<div>0</div>
 						<div>1</div>
 						<div>2</div>
@@ -180,11 +179,18 @@
 					</div>
 				</div>
 			</div>
-			<div class="set-time time-btn">SET</div>
-			<div class="save-time time-btn">SAVE</div>
-			<div class="saved-times-label">SAVED TIMES</div>
-			<div class="saved-times">
-				
+			<div class="buttons-container">
+				<div class="buttons-container-inner">
+					<div class="set-time time-btn">SET</div>
+					<div class="save-time time-btn">SAVE</div>
+					<div class="saved-times-label">SAVED TIMES</div>
+					<div class="saved-times">
+						<ul class="saved-times-list">
+							<li>School</li>
+							<li>Work</li>
+						</ul>
+					</div>
+				</div>
 			</div>
 		</div>
 	</div>
