Fit smaller screens

--- a/projects/snake/index.html
+++ b/projects/snake/index.html
@@ -67,6 +67,34 @@
 			text-align:center;
 			color:#2D4980;
 		}
+
+		@media screen and (max-height: 900px) {
+	    	div.title{
+				top:.5em;
+				height:1.8em;
+				line-height: 1.8em;
+				font-size:1.6em;
+				left:25%;
+			}
+	    	div.score-container{
+				top:.5em;
+				height:1.8em;
+				line-height: 1.8em;
+				font-size:1.6em;
+				left:75%;
+	    	}
+	    	button.start-button{
+	    		top:2em;
+	    		height:1.2em;
+	    		line-height: 1.2em;
+	    		font-size:1em;
+	    	}
+	    	div.description-container{
+	    		bottom:.5em;
+	    		font-size:1.4em;
+	    	}
+		}
+
 	</style>
 	<canvas id="canvas"></canvas>
 	<div class="title">SNAKE</div>
