--- a/projects/snake/index.html
+++ b/projects/snake/index.html
@@ -16,6 +16,7 @@
 			left:50%;
 			transform:translate(-50%,-50%);
 			border:1px solid #666;
+			background:#000;
 		}
 		div.title, div.score-container{
 			position:absolute;
@@ -103,7 +104,7 @@
 	</div>
 	<button class="start-button" onclick="startGame()">START</button>
 	<div class="description-container">	
-		Eat the apples to get longer. Use the arrow keys to move. You can teleport through the walls.
+		Eat the apples to get longer. Use the arrow keys to move. You can teleport through the walls. Press P to pause.
 	</div>
 	<script src="snake.js"></script>
 </body>
