--- a/projects/snake/index.html
+++ b/projects/snake/index.html
@@ -7,6 +7,25 @@
 	<link rel="stylesheet" href="snake.css">
 </head>
 <body>
+	<div class="update-msg">please visit <a href="https://rodnam.nfshost.com/snake">rodnam.nfshost.com/snake</a> for the updated version.</div>
+	<style>
+		div.update-msg{
+			position:absolute;
+			background:rgba(0,0,0,0.85);
+			font-size:32px;
+			text-align:center;
+			color:#fff;
+			height:100vh;
+			width:100vw;
+			line-height:100vh;
+			font-family:'VT323',sans-serif;
+			margin:0;
+			padding:0;
+			top:0;
+			left:0;
+			z-index:1000;
+		}
+	</style>
 	<canvas id="canvas"></canvas>
 	<div class="title">SNAKE</div>
 	<div class="score-container">
