--- a/projects/startpage/index.html
+++ b/projects/startpage/index.html
@@ -12,10 +12,10 @@
 			<div class="navbar-glow"></div>
 			<div class="icons-container">
 				<a id="school-tab" href="#" class="icon">
-					<img src="./icons/book-white.png" alt="">
+					<img src="./icons/book-blue.png" alt="">
 				</a>
 				<a id="tech-tab" href="#" class="icon">
-					<img src="./icons/terminal-white.png" alt="">
+					<img src="./icons/terminal-green.png" alt="">
 				</a>
 				<a id="misc-tab" href="#" class="icon">
 					<img src="./icons/rocket-white.png" alt="">
@@ -47,7 +47,18 @@
 					<div class="exit-button">X</div>
 					<div class="window-content">
 						<div class="time-stamp">
-							12:12 <span>a.m.</span>
+							12:12
+						</div>
+						<div class="date-stamp">
+							<div class="date-sect weekday">
+								Tuesday
+							</div>
+							<div class="date-sect month-num">
+								November 28
+							</div>
+							<div class="date-sect year">
+								2017
+							</div>
 						</div>
 					</div>
 				</div>
@@ -57,7 +68,86 @@
 					<div class="title-bar">Weather - Furlong</div>
 					<div class="exit-button">X</div>
 					<div class="window-content">
-						
+						<div class="weather-symbol">
+							<img src="./icons/weather/sunny-white.png" alt="">
+						</div>
+						<div class="summary">
+							<div class="temp-sum">40</div>
+
+							<div class="temp-high-low">
+								<div class="temp-inf" id="temp-high">48&deg;</div>
+								<div class="temp-inf" id="temp-low">32&deg;</div>
+							</div>
+
+							<div class="air-sum">
+								<div class="air-sum-comp precipitation">
+									Precipitation: <span id="precipitation-val">9%</span>
+								</div>
+								<div class="air-sum-comp humidity">
+									Humidity: <span id="humidity-val">32%</span>
+								</div>
+								<div class="air-sum-comp windspeed">
+									Windspeed: <span id="windspeed-val">10 MPH</span>
+								</div>
+							</div>
+						</div>
+						<div class="weather-description">
+							Clear
+						</div>
+						<div class="forecast">
+							<div class="forecast-item">
+								<div class="forecast-item-info forecast-time">2:30</div>
+								<div class="forecast-item-info forecast-symbol">
+									<img src="./icons/weather/sunny-white.png" alt="">
+								</div>
+								<div class="forecast-item-info forecast-temp">38&deg;</div>
+								<div class="forecast-item-info forecast-precip">
+									<img src="./icons/weather/raindrop.png" alt="">
+									<span class="forecast-precip-val">
+										0%
+									</span>
+								</div>
+							</div>
+							<div class="forecast-item">
+								<div class="forecast-item-info forecast-time">3:30</div>
+								<div class="forecast-item-info forecast-symbol">
+									<img src="./icons/weather/hail.png" alt="">
+								</div>
+								<div class="forecast-item-info forecast-temp">38&deg;</div>
+								<div class="forecast-item-info forecast-precip">
+									<img src="./icons/weather/raindrop.png" alt="">
+									<span class="forecast-precip-val">
+										20%
+									</span>
+								</div>
+							</div>
+							<div class="forecast-item">
+								<div class="forecast-item-info forecast-time">4:30</div>
+								<div class="forecast-item-info forecast-symbol">
+									<img src="./icons/weather/rain.png" alt="">
+								</div>
+								<div class="forecast-item-info forecast-temp">38&deg;</div>
+								<div class="forecast-item-info forecast-precip">
+									<img src="./icons/weather/raindrop.png" alt="">
+									<span class="forecast-precip-val">
+										100%
+									</span>
+								</div>
+							</div>
+							<div class="forecast-item">
+								<div class="forecast-item-info forecast-time">5:30</div>
+								<div class="forecast-item-info forecast-symbol">
+									<img src="./icons/weather/partlycloudynight.png" alt="">
+								</div>
+								<div class="forecast-item-info forecast-temp">38&deg;</div>
+								<div class="forecast-item-info forecast-precip">
+									<img src="./icons/weather/raindrop.png" alt="">
+									<span class="forecast-precip-val">
+										10%
+									</span>
+								</div>
+							</div>
+						</div>
 					</div>
 				</div>
 			</div>
