Add weather request

--- a/projects/startpage/index.html
+++ b/projects/startpage/index.html
@@ -12,13 +12,13 @@
 			<div class="navbar-glow"></div>
 			<div class="icons-container">
 				<a id="school-tab" href="#" class="icon">
-					<img src="./icons/book-blue.png" alt="">
+					<img src="./icons/book-white.png" alt="">
 				</a>
 				<a id="tech-tab" href="#" class="icon">
-					<img src="./icons/terminal-green.png" alt="">
+					<img src="./icons/terminal-white.png" alt="">
 				</a>
 				<a id="misc-tab" href="#" class="icon">
-					<img src="./icons/rocket-white.png" alt="">
+					<img src="./icons/puzzle-white.png" alt="">
 				</a>
 				<a id="nip-tab" href="#" class="icon">
 					<img src="./icons/japan-white.png" alt="">
