--- a/projects/startpage/index.html
+++ b/projects/startpage/index.html
@@ -34,7 +34,7 @@
 		<div class="windows-container-inner">
 			<div id="links" class="window">
 				<div class="window-inner">
-					<div class="title-bar">Favorites - School</div>
+					<div class="title-bar">Favorites - <span id="favorites-cat"></span></div>
 					<div class="exit-button">X</div>
 					<div class="window-content">
 						<div class="links-list-container link-col-2">
