Add news window

--- a/projects/startpage/index.html
+++ b/projects/startpage/index.html
@@ -4,6 +4,8 @@
 	<meta charset="UTF-8">
 	<title>Home</title>
 	<link rel="stylesheet" href="./css/index.css">
+	<link rel="icon" type="image/png" href="./icons/favicon-16.png" sizes="16x16">
+	<link rel="icon" type="image/png" href="./icons/favicon-32.png" sizes="32x32">
 </head>
 <body>
 	<div class="blur"></div>
@@ -45,6 +47,18 @@
 						<div class="links-list-container links-col-2">
 							<ul id="links-list-2">
 								
+							</ul>
+						</div>
+					</div>
+				</div>
+			</div>
+			<div id="news" class="window">
+				<div class="window-inner">
+					<div class="title-bar">News</div>
+					<div class="exit-button">X</div>
+					<div class="window-content">
+						<div class="news-list-container">
+							<ul id="news-list">
 							</ul>
 						</div>
 					</div>
