Fix active color and randomize background

--- a/projects/startpage/index.html
+++ b/projects/startpage/index.html
@@ -172,7 +172,7 @@
 		</div>
 	</div>
 	<div id="searchbar">
-		<div class="glyph">jamescrovo:<span>~$</span></div>
+		<div class="glyph">anon34533:<span>~$</span></div>
 		<input id="search-input" type="text">
 	</div>
 	<script src="./js/jquery-3.2.1.min.js"></script>
