--- a/projects/startpage/index.html
+++ b/projects/startpage/index.html
@@ -173,7 +173,7 @@
 	</div>
 	<div id="searchbar">
 		<div class="glyph">anon34533:<span>~$</span></div>
-		<input id="search-input" type="text">
+		<input id="search-input" spellcheck="false" type="text">
 	</div>
 	<script src="./js/jquery-3.2.1.min.js"></script>
 	<script src="./js/index.js"></script>
